<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    android:orientation="vertical"
    tools:context=".Activity.FilmeActivity">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/imageLivro"
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/filme_imagem"
            android:src="@drawable/padrao" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextLivro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/filme_titulo"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/filme_titulo"
                android:textColor="#000"
                android:textColorHint="#000"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextCategoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/filme_categoria"
                android:textColor="#000"
                android:textColorHint="#000"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/buttonCurtir"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_weight="2"
                    android:background="@android:drawable/screen_background_light_transparent"
                    android:contentDescription="@string/filme_button_curtir"
                    android:src="@drawable/ic_thumb_up_orange" />

                <ImageButton
                    android:id="@+id/buttonDescurtir"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_weight="2"
                    android:background="@android:drawable/screen_background_light_transparent"
                    android:contentDescription="@string/filme_button_descurtir"
                    android:src="@drawable/ic_thumb_down_orange" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/viewCurtidas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/filme_curtidas"
                    android:gravity="center"
                    android:text="@string/filme_curtidas"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="#000"/>

                <TextView
                    android:id="@+id/viewDescurtidas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/filme_descurtidas"
                    android:gravity="center"
                    android:text="@string/filme_descurtidas"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="#000"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/viewDescricao"
        android:layout_width="match_parent"
        android:layout_height="334dp"
        android:text="@string/filme_descricao"
        android:textColor="#000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonVoltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/screen_background_light_transparent"
            android:text="@string/filme_button_voltar"
            android:textColor="#000"/>

        <Button
            android:id="@+id/buttonComentar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/screen_background_light_transparent"
            android:text="@string/filme_button_comentar"
            android:textColor="#000"/>
    </LinearLayout>

</LinearLayout>