<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:actionBarNavMode="list"
    tools:context=".Activity.SugestaoLivroActivity">

    <TextView
        android:id="@+id/textViewDados"
        android:layout_width="0dp"
        android:layout_height="168dp"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/sugestoes_livro_instrucao"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/LinearTituloLivro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/LinearTituloLivro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/LinearAutorLivro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDados">

        <TextView
            android:id="@+id/viewTitulo"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sugestoes_livro_titulo_view"
            android:textColor="#000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/sugestoes_livro_titulo_edit"
            android:ems="10"
            android:hint="@string/sugestoes_livro_titulo_edit"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColorHint="#000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearAutorLivro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/LinearEditora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearTituloLivro">

        <TextView
            android:id="@+id/viewAutor"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sugestoes_livro_autor_view"
            android:textColor="#000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextAutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/sugestoes_livro_autor_edit"
            android:ems="10"
            android:hint="@string/sugestoes_livro_autor_edit"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColorHint="#000" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearEditora"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/LinearBotoes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearAutorLivro">

        <TextView
            android:id="@+id/viewEditor"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sugestoes_livro_editora_view"
            android:textColor="#000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextEditora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/sugestoes_livro_editora_edit"
            android:ems="10"
            android:hint="@string/sugestoes_livro_editora_edit"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColorHint="#000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearBotoes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearEditora">

        <Button
            android:id="@+id/buttonCancelar"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/screen_background_light_transparent"
            android:onClick="CancelarSugestao"
            android:text="@string/sugestoes_livro_button_cancelar"
            android:textColor="#000"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonEnviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/screen_background_light_transparent"
            android:onClick="carregarWebService"
            android:text="@string/sugestoes_livro_button_enviar"
            android:textColor="#000"
            android:textSize="18sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>