<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SugestaoSerieActivity">

    <TextView
        android:id="@+id/textViewDados"
        android:layout_width="0dp"
        android:layout_height="168dp"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/sugestoes_serie_instrucao"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/LinearTituloserie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/LinearTituloserie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/LinearLancamentoserie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDados">

        <TextView
            android:id="@+id/viewTitulo"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sugestoes_serie_titulo_view"
            android:textColor="#000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/sugestoes_serie_titulo_edit"
            android:ems="10"
            android:hint="@string/sugestoes_serie_titulo_edit"
            android:textColorHint="#000"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLancamentoserie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/LinearProdutora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearTituloserie">

        <TextView
            android:id="@+id/viewLancamento"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sugestoes_serie_lancamento_view"
            android:textColor="#000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextLancamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/sugestoes_serie_lancamento_edit"
            android:ems="10"
            android:hint="@string/sugestoes_serie_lancamento_edit"
            android:inputType="date"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColorHint="#000" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearProdutora"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/LinearBotoes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLancamentoserie">

        <TextView
            android:id="@+id/viewProdutora"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sugestoes_serie_produtora_view"
            android:textColor="#000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextProdutora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/sugestoes_serie_produtora_edit"
            android:ems="10"
            android:hint="@string/sugestoes_serie_produtora_edit"
            android:textColorHint="#000"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearBotoes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearProdutora">

        <Button
            android:id="@+id/buttonCancelar"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/screen_background_light_transparent"
            android:onClick="CancelarSugestao"
            android:text="@string/sugestoes_serie_button_cancelar"
            android:textColor="#000"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonEnviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/screen_background_light_transparent"
            android:onClick="carregarWebService"
            android:text="@string/sugestoes_serie_button_enviar"
            android:textColor="#000"
            android:textSize="18sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>